# philox

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: test.yml
philox/: philox.h
philox/internal/: common.h  philox2_64_10.h  philox4_32_10.h
tests/: CMakeLists.txt  test_philox.cpp  test_philox.cu
